c4prj2_input/grade.txt
Grading at Fri Jun 26 04:07:23 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:13:10: error: unused variable ‘len’ [-Werror=unused-variable]
   size_t len=strlen(str);
          ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
